--- a/Projeto_02_Node_Portal_Gestao/pages/home.html
+++ b/Projeto_02_Node_Portal_Gestao/pages/home.html
@@ -7,10 +7,10 @@
                     <div class="overlay-destaque"></div>
                     <div class="title-destaque-descricao">
                         <!--feito em off o link aqui e adicionado nos estilos-->
-                        <a href="/slug-aqui"><h2>Quer Fugir das Praias de Verão?</h2></a>
-                        <p>Donec consectetur libero eget bibendum ullamcorper. Quisque auctor nulla eu enim ultrices laoreet. Na..</p>
+                        <a href="/slug-aqui"><h2><%-post[0].titulo%></h2></a>
+                        <p><%-post[0].descricaoCurta%></p>
                     </div>
-                    <img src="/public/images/landscape.jpg" />
+                    <img src='<%-post[0].image%>' />
                 </div>
             </div>
         </section>
@@ -21,24 +21,17 @@
                 <br><br>
                 <div class="center">
                     <div class="ultimas">
-                        <div class="box-ultima-single">
-                            <img src="/public/images/noticia.png" />
-                            <div class="conteudo-noticia-single">
-                            <h3>Natureza e Geral</h3>
-                            <h2>Como Encarar o Surf em Floripa</h2>
-                            <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
-                            <a href="/encarar-o-surf">Saiba mais</a>
-                        </div>
-                        </div>
-                        <div class="box-ultima-single">
-                            <img src="/public/images/noticia.png" />
-                            <div class="conteudo-noticia-single">
-                            <h3>Natureza e Geral</h3>
-                            <h2>Como Encarar o Surf em Floripa</h2>
-                            <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
-                            <a href="/encarar-o-surf">Saiba mais</a>
-                        </div>
-                        </div>
+                        <%for(let i = 1; i < post.length;i++){ %>
+                            <div class="box-ultima-single">
+                                <img src="<%-post[i].image%>" />
+                                <div class="conteudo-noticia-single">
+                                    <h3><%-post[i].titulo%></h3>
+                                    <h2><%-post[i].categoria%></h2>
+                                    <p><%-post[i].conteudo%></p>
+                                    <a href="/encarar-o-surf">Saiba mais</a>
+                                </div>
+                            </div>
+                        <%}%>
                     </div>
                     <div class="mais-lidas">
                         <h3>Mais Lidas</h3>
